# Betoneira3D-old-

./: .gitignore  CMakeLists.txt  LICENSE  README.md  todo.txt
cmake/: FindGLFW3.cmake
engine/: CMakeLists.txt  engine.cpp  engine.h  glad.c
engine/color/: color.cpp  color.h
engine/file/: file.cpp  file.h
engine/graphics/: graphics.cpp  graphics.h
engine/graphics/mesh2d/: mesh2d.cpp  mesh2d.h
engine/graphics/mesh2dTextured/: mesh2dTextured.cpp  mesh2dTextured.h
engine/graphics/shader/: shader.cpp  shader.h
engine/graphics/texture/: texture.cpp  texture.h
engine/input/: input.cpp  input.h
engine/math/: math.cpp  math.h
engine/math/matrix/: matrix.cpp  matrix.h
engine/math/vector/: vector.cpp  vector.h
engine/os/: os.cpp  os.h
engine/random/: random.cpp  random.h
engine/render/: render.cpp  render.h
engine/shader/: shader.cpp  shader.h
engine/shaders/: texture2D.vert
engine/shared/: shared.cpp  shared.h
engine/texture/: texture.cpp  texture.h
engine/time/: time.cpp  time.h
engine/vector/: vector.cpp  vector.h
engine/window/: window.cpp  window.h
src/engine/: engine.cpp  engine.h
src/engine/shader/: shader.cpp  shader.h
src/engine/shared/: shared.cpp  shared.h
src/engine/window/: window.cpp  window.h
test/: CMakeLists.txt  main.cpp
test/assets/shaders/: simple2D.frag  simple2D.vert  texture2D.frag  texture2D.vert  texture3D.frag  texture3D.vert
test/src/: main.cpp
